fix overflow

--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ li a.active {
     position: relative;
     max-width: 600px;
     margin: 0 auto;
+    overflow-x: auto;
 }
 
 .timeline::after {
